--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <span>R$ 600,10</span>
                     </li>
                 </ul>
-                <button>Seguir para o Pagamento</button>
+                <button>Ir para o Pagamento</button>
             </section>
         </section>
         
